src/objects/ExcessCodeEmployer__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>External ID for Reference</description>
        <externalId>true</externalId>
        <label>External_ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System__c</fullName>
        <label>System</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web__c</fullName>
        <label>Web</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>ExcessCodeEmployer</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>System__c</columns>
        <columns>Web__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>ExcessCodeEmployer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ExcessCodesEmployer</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>